@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.30 2012/08/21 17:24:06 nanard Exp $
+$Id: Changelog.txt,v 1.32 2013/09/10 20:13:26 nanard Exp $
+
+2013/09/10:
+  small patch for MSVC >= 16
 
 2012/08/21:
   Little change in Makefile
